--- a/products/oeapi/branches/symnektra/symdemo/symdemo.vcproj
+++ b/products/oeapi/branches/symnektra/symdemo/symdemo.vcproj
@@ -46,7 +46,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\plugin\oestore;..\plugin\oecom;..\oeapiinitcom"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)libsymnektra&quot;;&quot;$(SolutionDir)oeapiinitcom&quot;;&quot;$(SolutionDir)plugin\oecom&quot;;&quot;$(SolutionDir)plugin\oestore&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -130,7 +130,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\plugin\oestore;..\plugin\oecom;..\oeapiinitcom"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)oeapicommon&quot;;&quot;$(SolutionDir)oeapiinitcom&quot;;&quot;$(SolutionDir)plugin\oecom&quot;;&quot;$(SolutionDir)plugin\oestore&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				RuntimeLibrary="0"
 				WarningLevel="3"
